<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.WireColorQuantity">

    <data>
        <variable
            name="viewModel"
            type="com.example.sahaelectricalstores.fragmentViewModel.OrderViewModel" />
        <variable
            name="fragmentWireColorQuantity"
            type="com.example.sahaelectricalstores.fragments.WireColorQuantity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/color_name_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/quantity_length_value_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/wire_color_quantity_view_holder" />

        <LinearLayout
            android:id="@+id/quantity_length_value_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity_value_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/quantity"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantity_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/length_value_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/length"
                android:layout_weight="1" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/length_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{@string/tot_amt(viewModel.price)}"
            tools:text="Total Amount"
            style="@style/Widget.sahaeletronicsstore.TextView"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                android:onClick="@{()->fragmentWireColorQuantity.cancel()}"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/next"
                android:layout_weight="1"
                android:onClick="@{()->fragmentWireColorQuantity.goToNext()}"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>